force-app/main/default/objects/Inquiry_Request__c/Inquiry_Request__c.object-meta.xml
<CustomObject>
    <label>Inquiry Request</label>
    <nameField>
        <label>Inquiry Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>