force-app/main/default/objects/Inquiry_Request__c/fields/Email_Website__c.field-meta.xml
<CustomField>
    <fullName>Email_Website__c</fullName>
    <label>Email/Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>