force-app/main/default/objects/Inquiry_Request__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>