force-app/main/default/objects/Inquiry_Request__c/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <label>Phone 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>